fixed whitespace issue of html when resize

--- a/styles/map.css
+++ b/styles/map.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 60rem;
 background-image: url("../images/map.jpg");
+background-position: center;
 background-size: cover;
 background-repeat: no-repeat;
 display: flex;
